<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="120dp"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="6dp"

        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageFood"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/imageFood"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/chowmin" />

            <LinearLayout
                android:layout_width="268dp"
                android:layout_height="106dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Name_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12sp"
                    android:text="@string/name_order"
                    android:textColor="#0E0E0E"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Order_Number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:padding="1dp"
                        android:text="@string/order_num"
                        android:textColor="#121111" />

                    <TextView
                        android:id="@+id/orderrr"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:text="@string/orderr"
                        android:textColor="#D81B60" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:padding="1dp"
                        android:text="@string/price"
                        android:textColor="#070707"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/orderRs"
                        android:textColor="#D81B60" />

                    <TextView
                        android:id="@+id/Order_price"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/Order_Price"
                        android:textColor="#D81B60" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
